HVAC Backup 2/objects/Branch_Division__c(1).object
<CustomObject>
    <fields>
        <fullName>AICH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AICH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Department</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIDH_Branches_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AIH_Email__c</fullName>
        <label>AIH Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AIH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AIH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_DivisionsAErB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AISDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AISDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_DivisionsCqOj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AM_User_Name__c</fullName>
        <formula>Service_AM__r.FirstName +&apos; &apos; +  Service_AM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code_Department_Number__c</fullName>
        <formula>Branch__r.Branch_Code__c+Department__r.Department_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code Department Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <formula>Branch__r.Branch_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Commercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Commercial</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions30</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Branches Department</relationshipLabel>
        <relationshipName>Branches_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_and_Division__c</fullName>
        <formula>Branch__r.Name &amp; &quot; &quot; &amp; Division__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch and Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions_CFS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Central_Commercial_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Central Commercial Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions90</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Branches Divisions</relationshipLabel>
        <relationshipName>Branches_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Branches Divisions</relationshipLabel>
        <relationshipName>Branches_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAMO_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAMO Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Department1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_User_Name__c</fullName>
        <formula>Service_RM__r.FirstName +&apos; &apos; + Service_RM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RM User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Branch__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Commercial_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Commercial Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions7uJu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_DivisionsAEmL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_AIDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales AIDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Department2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_AM_Email__c</fullName>
        <label>Sales AM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_RM_Email__c</fullName>
        <label>Sales RM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_SDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_SDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales SDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_SDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_SDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service SDH</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_Divisions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches_DivisionsAEEU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Branch_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Division__c</columns>
        <columns>Department__c</columns>
        <columns>AISDH__c</columns>
        <columns>CFS__c</columns>
        <columns>Service_RM__c</columns>
        <columns>Service_AM__c</columns>
        <columns>Service_SDH__c</columns>
        <columns>Service_SDE__c</columns>
        <columns>SMH__c</columns>
        <columns>SME__c</columns>
        <columns>Sales_AM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BRD-{0000}</displayFormat>
        <label>Branch Department Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branches Department</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>